--- a/admin/login/css/style.css
+++ b/admin/login/css/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .login-form button {
-    background-color: #042039; /* Warna biru tua tombol sesuai gambar */
+    background-color: #021C3C; /* Warna biru tua tombol sesuai gambar */
     color: white;
     padding: 10px;
     width: 100%;
@@ -76,10 +76,10 @@ body {
 
 /* Footer Styling */
 footer {
-    background-color: #0000FF; /* Biru */
+    background-color: #021C3C; /* Biru */
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 1px 0;
     margin-top: auto; /* Ini membuat footer tetap di bawah */
     width: 100%;
 }
