Update Dashboard Admin

--- a/admin/assets/css/DashboardAdmin.css
+++ b/admin/assets/css/DashboardAdmin.css
@@ -249,7 +249,7 @@ body {
   /* margin-top: 10px; */
 }
 
-.details .recentOrders {
+.details .recentAnnouncements {
   position: relative;
   display: grid;
   min-height: 500px;
@@ -285,28 +285,37 @@ body {
 .details table thead td {
   font-weight: 600;
 }
-.details .recentOrders table tr {
+.details .recentAnnouncements table tr {
   color: var(--black1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
-.details .recentOrders table tr:last-child {
+.details .recentAnnouncements table tr:last-child {
   border-bottom: none;
 }
-.details .recentOrders table tbody tr:hover {
+.details .recentAnnouncements table tbody tr:hover {
   background: var(--blue);
   color: var(--white);
 }
-.details .recentOrders table tr td {
+.details .recentAnnouncements table tr td {
   padding: 10px;
 }
-.details .recentOrders table tr td:last-child {
+.details .recentAnnouncements table tr td:last-child {
   text-align: end;
 }
-.details .recentOrders table tr td:nth-child(2) {
+.details .recentAnnouncements table tr td:nth-child(2) {
   text-align: end;
 }
-.details .recentOrders table tr td:nth-child(3) {
+.details .recentAnnouncements table tr td:nth-child(3) {
   text-align: center;
+}
+/* Tambahkan style untuk ikon agar terlihat berwarna */
+.action-icons a {
+  color: #3498db; /* Warna untuk ikon Edit */
+  margin-right: 8px;
+  text-decoration: none;
+}
+.action-icons a.delete {
+  color: #e74c3c; /* Warna untuk ikon Hapus */
 }
 .status.delivered {
   padding: 2px 4px;
@@ -410,7 +419,7 @@ body {
   .details {
     grid-template-columns: 1fr;
   }
-  .recentOrders {
+  .recentAnnouncements {
     overflow-x: auto;
   }
   .status.inProgress {
